--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	height: 95vh;
 	margin: -20px 0 50px;
-	background: rgb(58,83,180);
-	background: linear-gradient(90deg, rgba(58,83,180,1) 0%, rgba(253, 29, 29, 0.877) 0%, rgba(252,176,69,1) 100%);
-}
-
+	background-image: linear-gradient(to right bottom, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+	}
+	
 h1 {
 	font-weight: bold;
 	margin: 0;
@@ -61,15 +60,6 @@ button {
 
 button:active {
 	transform: scale(0.95);
-}
-
-button:focus {
-	outline: none;
-}
-
-button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
 }
 
 form {
@@ -117,24 +107,6 @@ input {
 	z-index: 2;
 }
 
-.container.right-panel-active .sign-in-container {
-	transform: translateX(100%);
-}
-
-.sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 0;
-	z-index: 1;
-}
-
-.container.right-panel-active .sign-up-container {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
-}
-
 @keyframes show {
 	0%, 49.99% {
 		opacity: 0;
@@ -178,10 +150,6 @@ input {
 	transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
-  	transform: translateX(50%);
-}
-
 .overlay-panel {
 	position: absolute;
 	display: flex;
@@ -197,21 +165,9 @@ input {
 	transition: transform 0.6s ease-in-out;
 }
 
-.overlay-left {
-	transform: translateX(-20%);
-}
-
-.container.right-panel-active .overlay-left {
-	transform: translateX(0);
-}
-
 .overlay-right {
 	right: 0;
 	transform: translateX(0);
-}
-
-.container.right-panel-active .overlay-right {
-	transform: translateX(20%);
 }
 
 .social-container {
@@ -255,13 +211,13 @@ footer a {
 }
 
 .fredLogin {
-    width: 150px;
-    margin-right: -42px;
+    width: 200px;
+    margin-right: -50px;
     margin-top: -15vh;
     z-index: 1;
 	position: absolute;
 	top: 100px;
-	left: -135px;	
+	left: -179px;	
 	z-index: 99;
 }
 
@@ -271,5 +227,7 @@ margin: 0 auto;
 }
 
 .mordor{
-	width: 60%;
+	width: 40%;
+	border-radius: 20%;
+	margin: 8%;
 }
