--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 95vh;
+	height: 100vh;
 	margin: -20px 0 50px;
 	background-image: linear-gradient(to left top, #f46eed, #ff5fbfd3, #ff5e91cb, #ff6c69e8, #f57d49d0, #f4774d, #f27452, #f07056, #f55e7fda, #e45cad, #b56cd7f8, #5f7ff2);
 	}
@@ -213,12 +213,11 @@ footer a {
 .fredLogin {
     width: 200px;
     margin-right: -50px;
-    margin-top: -15vh;
-    z-index: 1;
+    margin-top: -15%;
 	position: absolute;
 	top: 100px;
 	left: -179px;	
-	z-index: 99;
+	z-index: 100;
 }
 
 .main{
