--- a/style.css
+++ b/style.css
@@ -1,222 +1,168 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	background: #f6f5f7;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
-	margin: -20px 0 50px;
-	background-image: linear-gradient(to left top, #f46eed, #ff5fbfd3, #ff5e91cb, #ff6c69e8, #f57d49d0, #f4774d, #f27452, #f07056, #f55e7fda, #e45cad, #b56cd7f8, #5f7ff2);
-	}
-	
-h1 {
-	font-weight: bold;
-	margin: 0;
+  background: #f6f5f7;
+  display: flex;
+  padding-top: 2rem;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  height: 94vh;
+  margin: 0;
+  padding-top: 10rem;
+  background-image: linear-gradient(to left top, #021591, #011dd6, #0021f8, #0021f8, #0021f8, #011dd6, #021591);
 }
 
-h2 {
-	text-align: center;
+h1, h2 {
+  margin: 0;
 }
 
 p {
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 20px 0 30px;
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
 }
 
 span {
-	font-size: 12px;
-	color: black;
-}
-
-a {
-	color: #333;
-	font-size: 14px;
-	text-decoration: none;
-	margin: 15px 0;
+  font-size: 12px;
+  color: black;
 }
 
 button {
-	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
+  border-radius: 20px;
+  border: 1px solid #000f57;
+  background-color: #011eda;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+  margin: 3%;
 }
 
 button:active {
-	transform: scale(0.95);
+  transform: scale(0.95);
 }
 
 form {
-	background-color: #FFFFFF;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
+  background-color: #FFFFFF;
+  flex-direction: column;
+  padding: 0 50px;
+  text-align: center;
+  width: 50%;
+  height: 100%;
+  padding: 10%;
+  border-radius: 20%;
 }
 
 input {
-	background-color: #eee;
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
-	border-radius: 20px;
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+  border-radius: 20px;
 }
 
 .container {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.575), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  width: 950px;
+  max-width: 100%;
+  min-height: 380px;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-container {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
-}
-
-.sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 2;
-}
-
-@keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
-	
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
-	}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  position: relative; /* Important to ensure the form stays within the container */
 }
 
 .overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
-}
-
-.container.right-panel-active .overlay-container{
-	transform: translateX(-100%);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 1; /* Make sure the overlay is above the form but not on top of it */
 }
 
 .overlay {
-	background: #eb194a;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #ff7c11);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+  background: linear-gradient(to right, #2b59ff, #010e66);
+  color: #FFFFFF;
+  position: absolute;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  border-radius: 8px;
+  transition: transform 0.6s ease-in-out;
 }
 
 .overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 40px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  border-radius: 8px;
 }
 
 .overlay-right {
-	right: 0;
-	transform: translateX(0);
+  right: 0;
+ 
 }
 
-.social-container {
-	margin: 20px 0;
+.footer  {
+  background-color: #000000;
+  color: #fff;
+  font-size: 14px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  text-align: center;
+  bottom: 0;
+  z-index: 999;
 }
 
-.social-container a {
-	border: 1px solid #DDDDDD;
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
+.footer p {
+  margin: 10px 0;
 }
 
-footer {
-    background-color: #000000;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
+.footer i {
+  color: gray;
 }
 
 .fredLogin {
-    width: 200px;
-    margin-right: -50px;
-    margin-top: -15%;
+    width: 350px;
+    margin-top: -31%;
 	position: absolute;
 	top: 100px;
-	left: -179px;	
+	left: 40px;	
 	z-index: 100;
 }
 
@@ -229,4 +175,132 @@ margin: 0 auto;
 	width: 40%;
 	border-radius: 20%;
 	margin: 8%;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 980%;
+    max-width: 950px;
+  }
+  
+  .fredLogin {
+    width: 300px;
+    top: 80px;
+    left: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  .fredLogin {
+    width: 250px;
+    top: 70px;
+    left: 20px;
+  }
+  
+  form {
+    padding: 8%;
+  }
+  
+  .overlay-container {
+    height: 90%;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    min-height: auto;
+  }
+  
+  form {
+    width: 80%;
+    padding: 6%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .overlay-container {
+    position: relative;
+    width: 100%;
+    height: 450px;
+    left: 0;
+    padding-bottom: 2rem;
+  }
+  
+  .overlay {
+    position: relative;
+    left: 0;
+    width: 100%;
+  }
+  
+  .overlay-panel {
+    width: 100%;
+    padding: 20px;
+  }
+  
+  .fredLogin {
+    width: 200px;
+    position: relative;
+    top: 20px;
+    left: 0;
+    margin: 0 auto;
+    display: block;
+  }
+  
+  .body {
+    height: auto;
+    min-height: 100vh;
+    padding-bottom: 60px;
+  }
+  .mordor{
+	margin-top: 4rem;
+}
+}
+
+@media (max-width: 576px) {
+  .container {
+    width: 95%;
+    padding:2rem;
+  }
+  
+  form {
+    width: 90%;
+  }
+  
+  button {
+    padding: 10px 30px;
+  }
+  
+  .fredLogin {
+    width: 150px;
+  }
+  
+  .mordor {
+    width: 50%;
+    margin-top: 4rem;
+  }
+  
+  .overlay-container {
+    height: 400px;
+  }
+  
+  .footer {
+    font-size: 12px;
+  }
+}
+
+@media (max-height: 600px) {
+  .body {
+    padding-top: 1rem;
+  }
+  
+  .container {
+    min-height: 400px;
+  }
+  
+  .overlay-container {
+    height: 180px;
+  }
 }
